# -SZE-MOSZE-2020-BDFANS

./: Battle.cpp  Battle.h  Blood_Raven.json  CMakeLists.txt  CharacterSVGRenderer.cpp  CharacterSVGRenderer.h  Damage.h  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Hero.cpp  Hero.h  HeroTextRenderer.cpp  HeroTextRenderer.h  JSON.cpp  JSON.h  Makefile  Map.cpp  Map.h  MarkedMap.cpp  MarkedMap.h  Monster.cpp  Monster.h  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  ObserverTextRenderer.cpp  ObserverTextRenderer.h  PreparedGame.cpp  PreparedGame.h  README.md  Renderer.h  Report.md  SVGRenderer.cpp  SVGRenderer.h  TextRenderer.h  Unit.cpp  Unit.h  Zombie.json  _battle_8h.html  (+248 more)
.github/workflows/: diffresult.yml  doxygen.yml  jparsetest.yml  memtest.yml
Docker/: Dockerfile
Units/: a.txt  b.txt  c.txt
gameinputs/: gametestmove.txt
maptestfiles/: MTestmapHeroes.txt
parsertestfiles/: jsonparsertest.txt  manywhitespace.txt  nowhitespace.txt
renderertestfiles/: couttextcompare.txt  logcompare.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+36 more)
tests/: jsonparsertest.cpp
